K8S/platforms-depl.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
# This specifies our POD
spec:
  replicas: 1
  selector: # selects from template down below (names should)
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: nemanja1203/platformservice:latest
---
# Cluster IP Service
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: plaformgrpc
    protocol: TCP
    port: 666
    targetPort: 666
