K8S/platforms-np-srv.yaml
# NodePort Service
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice # The same as in platforms-depl.yaml spec/selector/matchLabels/app
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
